# MSU-computer-graphics

./: CMakeLists.txt  README.md
glslprogram/: glslprogram.cpp  glslprogram.h
mesh/: drawable.h  vboplane.cpp  vboplane.h  vbosphere.cpp  vbosphere.h
shader/: 0.frag  0.vert  1.frag  1.vert  2.frag  2.vert  3.frag  3.vert
src/: computer_graphics.cpp
